# agui-on-acp

./: .gitattributes  .gitignore  LICENSE  README.md  bridge.config.json  check.sh  format.sh  package.json  pnpm-lock.yaml  pyproject.toml
.claude/agents/: backend-dev.md  frontend-dev.md  protocol-debugger.md  test-runner.md
agui_on_acp/: __main__.py  agui_endpoint.py  config.py  logging_config.py  main.py
agui_on_acp/agent/: acp_protocol.py  runner.py
agui_on_acp/agui/: events.py  sse.py
agui_on_acp/bridge/: acp_to_agui.py
agui_on_acp/sessions/: manager.py  routes.py  store.py  types.py
agui_on_acp/types/: api.py
backend/: __init__.py  __main__.py  agui_endpoint.py  main.py  pyproject.toml
backend/agent/: acp_protocol.py  runner.py
backend/agui/: events.py  sse.py
backend/api/: files.py  git.py
backend/bridge/: acp_to_agui.py
backend/policy/: tool_policy.py  types.py
backend/sessions/: manager.py  routes.py  store.py  types.py
backend/tasks/: manager.py  routes.py  store.py  types.py
backend/types/: acp.py  api.py  session.py
docs/: ROADMAP.md  architecture.md  demo-walkthrough.md  integration-contract.md  protocol-translation.md  why-agui.md
example-frontends/: agents.md
example-frontends/copilotkit-demo/: README.md  pnpm-lock.yaml
example-frontends/copilotkit-demo/src/: App.tsx
example-frontends/custom-workspace-ui-demo/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
example-frontends/custom-workspace-ui-demo/src/: App.tsx  types.ts
example-frontends/httpagent-demo/: README.md  index.html
example-frontends/httpagent-demo/src/: App.tsx
examples/: agents.md
examples/copilotkit-demo/: README.md  index.html  package.json
examples/copilotkit-demo/src/: App.tsx
examples/httpagent-demo/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
reference-ui/: App.tsx  index.css  index.html  package.json  tailwind.config.js  vite-env.d.ts
reference-ui/components/: ChatPanel.tsx  SessionSidebar.tsx  TaskCard.tsx  TaskPanel.tsx  ToolCard.tsx
reference-ui/services/: slashCommands.ts  taskStore.ts  todoParser.ts
reference-ui/src/hooks/: useAgUiStream.ts
reference-ui/src/services/: api.ts  (+1 more)
reference-ui/stores/: sessionStore.ts
scripts/: dev-backend.mjs
tests/: __init__.py  conftest.py  fake_agent.py  sse_helpers.py  test_translation.py  transport.py
(+12 files in other folders)
