[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agui_on_acp*"]

[project]
name = "agui-on-acp"
version = "0.1.0"
description = "AG-UI on ACP — a protocol translator that exposes any ACP-compatible coding agent over the standard AG-UI event stream"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "agent-client-protocol>=0.10.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
agui-on-acp = "agui_on_acp.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning:acp.*",
]
